criando exceção de mais de um data na listagem por data